upload repo content from private repo